crates/au-cli/tests/it/snapshots/it__scenarios__body-nested-section-optional-absent.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 41,
                        "line_col": {
                          "end": {
                            "col": 42,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/body-nested-section-optional-absent/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "body-nested-section-optional-absent"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "body-nested-section-optional-absent"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/body-nested-section-optional-absent/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 73,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 7
                },
                "start": {
                  "col": 1,
                  "line": 6
                }
              },
              "start": 67
            },
            "text": "Why"
          },
          {
            "kind": "heading",
            "level": 2,
            "span": {
              "end": 129,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 11
                },
                "start": {
                  "col": 1,
                  "line": 10
                }
              },
              "start": 115
            },
            "text": "Background"
          },
          {
            "kind": "heading",
            "level": 2,
            "span": {
              "end": 179,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 15
                },
                "start": {
                  "col": 1,
                  "line": 14
                }
              },
              "start": 167
            },
            "text": "Decision"
          }
        ],
        "claim": [
          "decision"
        ],
        "closure": [
          "decision"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "decision",
                "origin_path": "<root>/scenarios/body-nested-section-optional-absent/type/decision.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 61,
                        "line_col": {
                          "end": {
                            "col": 43,
                            "line": 3
                          },
                          "start": {
                            "col": 14,
                            "line": 3
                          }
                        },
                        "start": 32
                      },
                      "file": "<root>/scenarios/body-nested-section-optional-absent/optional-skipped.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "Adopt SQLite for the dev DB"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "Adopt SQLite for the dev DB"
                }
              }
            ],
            "field": "description"
          }
        ],
        "file": "<root>/scenarios/body-nested-section-optional-absent/optional-skipped.md",
        "section_presence": [
          {
            "depth": 1,
            "name": "Why",
            "optional": false,
            "path": [
              "Why"
            ],
            "present": true,
            "span": {
              "end": 73,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 7
                },
                "start": {
                  "col": 1,
                  "line": 6
                }
              },
              "start": 67
            }
          },
          {
            "depth": 2,
            "name": "Background",
            "optional": false,
            "path": [
              "Why",
              "Background"
            ],
            "present": true,
            "span": {
              "end": 129,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 11
                },
                "start": {
                  "col": 1,
                  "line": 10
                }
              },
              "start": 115
            }
          },
          {
            "depth": 2,
            "name": "AlternativesConsidered",
            "optional": true,
            "path": [
              "Why",
              "AlternativesConsidered"
            ],
            "present": false
          },
          {
            "depth": 2,
            "name": "Decision",
            "optional": false,
            "path": [
              "Why",
              "Decision"
            ],
            "present": true,
            "span": {
              "end": 179,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 15
                },
                "start": {
                  "col": 1,
                  "line": 14
                }
              },
              "start": 167
            }
          }
        ]
      }
    ]
  }
}
